--- a/index.html
+++ b/index.html
@@ -4,3 +4,5 @@ author_profile: true
 header:
   image: "/images/wall.jpg"
 ---
+
+I am a 3rd year student at Ecole Polytechnique, France’s leading school of science and engineering. This year, I major in Applied Mathematics, focusing mainly on statistics and probability, optimization, data science (ML and DL) as well as financial engineering. This website gathers all the project in which I participated throughout my studies at Ecole Polytechnique.
