--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: home
 author_profile: true
 header:
-  image: "/images/wall.jpg"
+  image: "/images/first.jpg"
 ---
 
 I am a 3rd year student at Ecole Polytechnique, France’s leading school of science and engineering. This year, I major in Applied Mathematics, focusing mainly on statistics and probability, optimization, data science (ML and DL) as well as financial engineering. This website gathers all the project in which I participated throughout my studies at Ecole Polytechnique.
